# ridon

./: README.md
src/bimi_bmw/: CMakeLists.txt  package.xml
src/bimi_bmw/launch/: bringup.launch
src/bimi_bmw_urdf/: CMakeLists.txt  package.xml
src/bimi_bmw_urdf/launch/: mir-bmw.launch
src/bimi_bmw_urdf/urdf/: mir_bmw.urdf
src/data_acquisition/: package.xml
src/data_acquisition/config/: parameters.yaml
src/joy_control/: package.xml
src/run_model/: package.xml
src/run_model/launch/: model_run.launch
